rewrite and fix z-index (#96)

--- a/src/components/Preloader/index.scss
+++ b/src/components/Preloader/index.scss
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 999999999999;
+  z-index: $z-index-preloader;
   position: absolute;
   background-color: rgba(255, 255, 255, 0.85);
 }
