--- a/src/style/scss/04_components/_button.scss
+++ b/src/style/scss/04_components/_button.scss
@@ -24,7 +24,6 @@
     display: block;
     width: 0;
     height: 0;
-    border-radius: 50%;
     background-color: $color-blackish;
     transition: width 0.5s ease-in-out, height 0.5s ease-in-out;
     transform: translate(-50%, -50%);
